--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,11 +5,15 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven { url 'https://dl.bintray.com/umsdk/release' }
+//        maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url 'https://repo1.maven.org/maven2/' }
+        maven { url 'https://developer.huawei.com/repo/'}
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+//        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.huawei.agconnect:agcp:1.4.2.300'
     }
 }
 
@@ -17,7 +21,9 @@ rootProject.allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://dl.bintray.com/umsdk/release' }
+//        maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url 'https://repo1.maven.org/maven2/' }
+        maven { url 'https://developer.huawei.com/repo/'}
     }
 }
 
@@ -33,27 +39,65 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
     dependencies {
 
-        //友盟
-        //PushSDK必须依赖基础组件库，所以需要加入对应依赖
-        // implementation 'com.umeng.umsdk:common:1.5.4'
-        implementation 'com.umeng.umsdk:common:2.0.0'
-        //PushSDK必须依赖utdid库，所以需要加入对应依赖
-        implementation 'com.umeng.umsdk:utdid:1.1.5.3'
-        //PushSDK
-        implementation 'com.umeng.umsdk:push:6.0.1'
-        //统计功能
-        implementation 'com.umeng.umsdk:analytics:8.1.2'
-
-        implementation 'com.umeng.umsdk:huawei-basetb:2.6.3.305'
-        implementation 'com.umeng.umsdk:huawei-pushtb:2.6.3.305'
-        implementation 'com.umeng.umsdk:huawei-umengaccs:1.2.1'
-
-        implementation 'com.umeng.umsdk:meizu-push:3.8.1'
-        implementation 'com.umeng.umsdk:meizu-umengaccs:1.0.6'
-
-        implementation 'com.umeng.umsdk:xiaomi-push:3.6.9'
-        implementation 'com.umeng.umsdk:xiaomi-umengaccs:1.0.9'
+//        //友盟
+//        //PushSDK必须依赖基础组件库，所以需要加入对应依赖
+//        // implementation 'com.umeng.umsdk:common:1.5.4'
+//        implementation 'com.umeng.umsdk:common:2.0.0'
+//        //PushSDK必须依赖utdid库，所以需要加入对应依赖
+//        implementation 'com.umeng.umsdk:utdid:1.1.5.3'
+//        //PushSDK
+//        implementation 'com.umeng.umsdk:push:6.0.1'
+//        //统计功能
+//        implementation 'com.umeng.umsdk:analytics:8.1.2'
+//
+//        implementation 'com.umeng.umsdk:huawei-basetb:2.6.3.305'
+//        implementation 'com.umeng.umsdk:huawei-pushtb:2.6.3.305'
+//        implementation 'com.umeng.umsdk:huawei-umengaccs:1.2.1'
+//
+//        implementation 'com.umeng.umsdk:meizu-push:3.8.1'
+//        implementation 'com.umeng.umsdk:meizu-umengaccs:1.0.6'
+//
+//        implementation 'com.umeng.umsdk:xiaomi-push:3.6.9'
+//        implementation 'com.umeng.umsdk:xiaomi-umengaccs:1.0.9'
+        implementation 'androidx.appcompat:appcompat:1.1.0'
+        implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+        //基础组件库依赖(必须)
+        implementation 'com.umeng.umsdk:common:9.3.8'
+        implementation 'com.umeng.umsdk:asms:1.2.2'
+        implementation 'com.umeng.umsdk:apm:1.2.0'
+        implementation 'com.umeng.umsdk:utdid:1.5.2.1'
+        //友盟push相关依赖(必须)
+        implementation 'com.umeng.umsdk:push:6.3.3'
+        implementation 'com.umeng.umsdk:alicloud-httpdns:1.3.2.3'
+        implementation 'com.umeng.umsdk:alicloud-utils:2.0.0'
+        implementation 'com.umeng.umsdk:alicloud_beacon:1.0.5'
+        implementation 'com.umeng.umsdk:agoo-accs:3.4.2.7'
+        implementation 'com.umeng.umsdk:agoo_aranger:1.0.6'
+        implementation 'com.umeng.umsdk:agoo_networksdk:3.5.8'
+        implementation 'com.umeng.umsdk:agoo_tnet4android:3.1.14.10'
+        // 小米Push通道
+        implementation 'com.umeng.umsdk:xiaomi-push:3.8.5'
+        implementation 'com.umeng.umsdk:xiaomi-umengaccs:1.2.1'
+        // 华为Push通道
+        implementation 'com.huawei.hms:push:5.0.4.302'
+        implementation 'com.umeng.umsdk:huawei-umengaccs:1.3.1'
+        // 魅族Push通道
+        implementation 'com.umeng.umsdk:meizu-push:4.0.2'
+        implementation 'com.umeng.umsdk:meizu-umengaccs:1.1.3'
+        // OppoPush通道
+        implementation 'com.umeng.umsdk:oppo-push:2.1.0'
+        implementation 'com.umeng.umsdk:oppo-umengaccs:1.0.7-fix'
+        // VivoPush通道
+        implementation 'com.umeng.umsdk:vivo-push:2.9.0'
+        implementation 'com.umeng.umsdk:vivo-umengaccs:1.1.2'
     }
 }
